package jsoc.model.incident;

import jsoc.model.enums.IncidentStatus;
import jsoc.model.enums.Severity;
import jsoc.model.user.User;

import java.time.LocalDateTime;

public class MalwareIncident extends Incident {

    public MalwareIncident(String title, String description, Severity severity) {
        super(title, description, severity);
    }

    public MalwareIncident(String id, String title, String description,
                           Severity severity, IncidentStatus status,
                           LocalDateTime createdAt, User assignedTo) {
        super(id, title, description, severity, status, createdAt, assignedTo);
    }

    @Override
    public String getType() {
        return "MALWARE";
    }

    @Override
    public String getResponseProcedure() {
        return "Isolation poste + analyse hash";
    }

    @Override
    public int computeDefaultSLAHours() {
        return 1;
    }

    @Override
    public String getCWE() {
        return "CWE-506";
    }
}
