@startuml J-SOC

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
hide empty members

title J-SOC - Diagramme de classes

package "jsoc.interfaces" <<Frame>> {

    interface "Assignable<U>" as Assignable {
        + assignTo(user: U) : void
        + unassign() : void
        + getAssignee() : U
        + isAssigned() : boolean
    }

    interface Notifiable {
        + notify(message: String) : void
        + getNotifications() : List<String>
        + clearNotifications() : void
    }
}

package "jsoc.model.enums" <<Frame>> {

    enum Severity {
        LOW
        MEDIUM
        HIGH
        CRITICAL
        --
        - slaHours : int
        + getSlaHours() : int
    }

    enum IncidentStatus {
        NEW
        ASSIGNED
        IN_PROGRESS
        RESOLVED
        CLOSED
        ESCALATED
        --
        + canTransitionTo(next: IncidentStatus) : boolean
        + isTerminal() : boolean
    }
}

package "jsoc.model" <<Frame>> {

    class Comment {
        - id : long
        - author : String
        - content : String
        - timestamp : LocalDateTime
    }

    class HistoryEntry {
        - id : long
        - action : String
        - performedBy : String
        - timestamp : LocalDateTime
        - oldValue : String
        - newValue : String
    }

    class IOC {
        - id : long
        - type : IOCType
        - value : String
        - description : String
    }

    enum IOCType {
        IP
        HASH
        URL
        DOMAIN
        EMAIL
    }

    IOC +-- IOCType
}

package "jsoc.model.user" <<Frame>> {

    abstract class User {
        - id : long
        - username : String
        - password : String
        - email : String
        - notifications : List<String>
        --
        + {abstract} getRole() : String
        + {abstract} canPerformAction(action: String) : boolean
        + notify(message: String) : void
        + getNotifications() : List<String>
        + clearNotifications() : void
    }

    class Analyst {
        + getRole() : String
        + canPerformAction(action: String) : boolean
    }

    class Manager {
        + getRole() : String
        + canPerformAction(action: String) : boolean
    }

    User <|-- Analyst
    User <|-- Manager
}

package "jsoc.model.incident" <<Frame>> {

    abstract class Incident {
        - id : String
        - title : String
        - description : String
        - severity : Severity
        - status : IncidentStatus
        - createdAt : LocalDateTime
        - assignedTo : User
        - comments : List<Comment>
        - history : List<HistoryEntry>
        - iocs : Set<IOC>
        --
        + {abstract} getType() : String
        + {abstract} getResponseProcedure() : String
        + {abstract} computeDefaultSLAHours() : int
        + {abstract} getCWE() : String
        + addComment(c: Comment) : void
        + addHistoryEntry(h: HistoryEntry) : void
        + addIOC(ioc: IOC) : void
        + transitionTo(newStatus: IncidentStatus) : void
        + assignTo(user: User) : void
        + unassign() : void
        + getAssignee() : User
        + isAssigned() : boolean
    }

    class PhishingIncident {
        + getType() : String
        + getResponseProcedure() : String
        + computeDefaultSLAHours() : int
        + getCWE() : String
    }

    class MalwareIncident {
        + getType() : String
        + getResponseProcedure() : String
        + computeDefaultSLAHours() : int
        + getCWE() : String
    }

    class DDoSIncident {
        + getType() : String
        + getResponseProcedure() : String
        + computeDefaultSLAHours() : int
        + getCWE() : String
    }

    Incident <|-- PhishingIncident
    Incident <|-- MalwareIncident
    Incident <|-- DDoSIncident
}

User      ..|> Notifiable
Incident  ..|> Assignable

Incident "1" *-- "0..*" Comment        : > comments
Incident "1" *-- "0..*" HistoryEntry   : > history
Incident "1" *-- "0..*" IOC            : > iocs

Incident "1" --> "1"   Severity        : > severity
Incident "1" --> "1"   IncidentStatus  : > status
Incident "1" --> "0..1" User           : > assignedTo

IOC      "1" --> "1"   IOCType         : > type

@enduml
